@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020170811"
-#define public MagickPackageReleaseDate "snapshot-20170811"
+#define public MagickPackageVersionAddendum ".020170814"
+#define public MagickPackageReleaseDate "snapshot-20170814"
