@@ -35,6 +35,14 @@
 <div class="document">
 
 
+<p>2017-08-14  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>coders/pcd.c (ReadPCDImage): Fix memory leak on return path due
+to corrupted header.  Patch included in email on 14 Aug 2017 by
+Petr Gajdos (ImageMagick CVE CVE-2017-8351).</li>
+</ul>
+</blockquote>
 <p>2017-08-11  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
